fixes on mobile version

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,5 @@
 html {
-    min-height: 100%;
+    height: 100%;
 }
 
 body {
@@ -7,6 +7,7 @@ body {
     background: rgb(248, 248, 248);
     padding-top: 50px;
     min-height: 100%;
+    position: relative;
 }
   
 .btn-basic {
@@ -40,8 +41,8 @@ body {
     &:hover {
         transform: scale(1.04);
         background-color: rgb(30, 215, 96);
-        color: rgb(255, 255, 255);
         text-decoration: none;
+        color: white;
     }
     &:focus {
         outline: none;
@@ -59,8 +60,9 @@ body {
     font-size: 10px;
     padding: 20px;
     margin: 50px 5px 10px 5px;
-    border-radius: 15px;
+    border-radius: 25px;
     min-width: 110px;
+    text-transform: capitalize;
 }
 
 .logo {
@@ -102,28 +104,41 @@ body {
     font-size: 1.2rem;
 }
 
+@media all and (max-width: 767px) { 
+    .btn-basic:hover {
+        transform: none;
+        background-color: rgb(29, 185, 84);
+    }
+}
+
 @media all and (max-width: 767px) {
+  body {
+    padding-bottom: 30px;
+    padding-top: 20px;
+  }
   #quiz h1 {
-    font-size: 1.6rem;
+    font-size: 1.3rem;
   }
   .btn-basic {
-    margin-top: 20px;
-    font-size: 1.2rem;
+    margin-top: 15px;
+    font-size: 0.9rem;
     letter-spacing: 1px;
     line-height: 1.3;
-    padding: 25px 15px;
+    padding: 20px 15px;
   }
-  .btn-red {
+  .btn-small {
     font-size: 10px;
-    padding: 20px;
-  }
-  #root {
-    position: relative;
-    padding-bottom: 30px;
+    padding: 10px;
+    min-width: 80px;
+    border-radius: 18px;
   }
   #home, #instruction {
       h1 {
-          font-size: 2.5rem;
+          font-size: 2rem;
       }
   } 
+  #toast-container {
+    top: 20px;
+    right: 20px;
+  }
 }
